<resources>
    <string name="app_name">Look</string>
    <string name="login_text">Faça seu</string>
    <string name="other_login">Ou então insira seus dados de login</string>
    <string name="entrar">Entrar</string>
    <string name="google_button">google button</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Login!</string>
    <string name="n_o_possui_cadastro">Não possui Cadastro?</string>
    <string name="registe_se">Registe-se</string>
    <string name="lupa">Lupa</string>
    <string name="nome">Nome</string>
    <string name="confirme_a_senha">Confirme a senha</string>
    <string name="criar">Criar</string>
    <string name="nome_evento">Nome evento</string>
    <string name="Ingressos">Ingressos</string>
    <string name="titulo">Titulo</string>
    <string name="dataInicio">Data de Inicio</string>
    <string name="dataFim">Data de Fim</string>
    <string name="descricao">Descricao</string>
    <string name="Preco">Preco</string>
    <string name="perfil">Perfil</string>
    <string name="favoritos">Favoritos</string>
    <string name="configuracoes">Configurações</string>
    <string name="configuraces">Configurações</string>
    <string name="suporte">Suporte</string>
    <string name="notificacoes">Notificações</string>
    <string name="close_drawer">Fechar</string>
</resources>