<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgregistro"
    tools:context=".Registo">


    <Button
        android:id="@+id/Registo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F5CA04"
        android:text="@string/criar"
        android:textColor="#8940B7"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_Textinput"
        app:layout_constraintVertical_bias="0.097" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="265dp"
        android:layout_height="60dp"
        android:autofillHints="Email"
        android:background="@drawable/myrect"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text|textPersonName|textAutoComplete"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <EditText
        android:id="@+id/Email_Textinput"
        android:layout_width="265dp"
        android:layout_height="60dp"
        android:autofillHints="Email"
        android:background="@drawable/myrect"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text|textEmailAddress|textAutoComplete"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/Password_Textinput"
        android:layout_width="265dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:background="@drawable/myrect"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_Textinput"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/password_Textinput"
        android:layout_width="265dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:background="@drawable/myrect"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/confirme_a_senha"
        android:inputType="text|textPassword"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_Textinput"
        app:layout_constraintVertical_bias="0.052" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="43dp"
        android:layout_height="50dp"
        android:src="@drawable/arrowback24px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        android:onClick="voltar"/>


</androidx.constraintlayout.widget.ConstraintLayout>