<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/accountcircle"
            app:layout_constraintBottom_toTopOf="@+id/imageView12"
            app:layout_constraintEnd_toStartOf="@+id/textView14"
            app:layout_constraintHorizontal_bias="0.62"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="148dp"
            android:layout_height="39dp"
            android:text="@string/perfil"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.266"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.129" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="92dp"
            android:src="@drawable/favorite"
            app:layout_constraintBottom_toTopOf="@+id/imageView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.237" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favoritos"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:layout_constraintVertical_bias="0.45" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuracoes"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toEndOf="@+id/imageView13"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.243" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>