<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:translationZ="-10dp">


    <Button
        android:id="@+id/MyEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:background="#00FFFFFF"
        android:text="Meus Eventos"
        android:textColor="#8A40B8"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="#CACACA"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toStartOf="@+id/MyEvents"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/MyTickets"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/MyTickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#005A5A5A"
        android:text="Meus Ingressos"
        android:textColor="#8A40B8"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/MyEvents"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="48dp"
        android:scaleX="1"
        android:scaleY="1"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685"
        tools:elevation="100dp"
        tools:srcCompat="@drawable/fotoperfil" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke_rect"
        android:onClick="login"
        android:text="Terminar Sessão"
        android:textColor="#8940B7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="-1dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bgperfil" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="pedroruiz2001@hotmail.com"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:layout_editor_absoluteX="101dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Pedro Ruiz"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        tools:layout_editor_absoluteX="145dp" />

    <Button
        android:id="@+id/notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="364dp"
        android:background="#00FFFFFF"
        android:text="@string/notificacoes"
        android:textColor="#8A8A8A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/suporte"
        android:textColor="#8A8A8A"
        app:layout_constraintBottom_toTopOf="@+id/config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifications"
        app:layout_constraintVertical_bias="0.516" />

    <Button
        android:id="@+id/config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="192dp"
        android:background="#00FFFFFF"
        android:text="@string/configuraces"
        android:textColor="#8A8A8A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginEnd="1dp"
        android:background="#CACACA"
        app:layout_constraintBottom_toTopOf="@+id/support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifications"
        app:layout_constraintVertical_bias="0.51" />

    <View
        android:id="@+id/view4"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_marginEnd="1dp"
        android:background="#CACACA"
        app:layout_constraintBottom_toTopOf="@+id/config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/support"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="voltar"
        android:rotation="90"
        android:src="@drawable/circlearrow24px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />


</androidx.constraintlayout.widget.ConstraintLayout>